Rebased osx build.xml